# bot-note-reader

./: .gitignore  Dockerfile  Notion.py  README.md  docker-compose.yml  main.py  pyproject.toml
